--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,71 @@
-#container {
+// #container {
+//   text-align: center;
+
+//   position: absolute;
+//   left: 0;
+//   right: 0;
+//   top: 50%;
+//   transform: translateY(-50%);
+// }
+
+// #container strong {
+//   font-size: 20px;
+//   line-height: 26px;
+// }
+
+// #container p {
+//   font-size: 16px;
+//   line-height: 22px;
+
+//   color: #8c8c8c;
+
+//   margin: 0;
+// }
+
+// #container a {
+//   text-decoration: none;
+// }
+.centro{
+  display: block;
   text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 5%;
+  padding-bottom: 5%;
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+#map{
+  width: 100%;
+  height: 50%;
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
+.ubicacion{
+  position: fixed;
+  bottom: 422px;
+  background: rgba(226, 213, 21, 0.897);
+  right: 0px;
 }
 
-#container a {
-  text-decoration: none;
+.mostrar{
+  position: fixed;
+  bottom: 356px;
+  background: rgba(226, 213, 21, 0.897);
+  right: 0px;
+}
+
+.guardar{
+  position: fixed;
+  bottom: 389px;
+  background: rgba(226, 213, 21, 0.897);
+  right: 0px;
+}
+
+.letra{
+  color: rgb(0, 0, 0);
+}
+
+#label{
+  display: block;
+  text-align: center;
+  color: rgb(60, 0, 84);
 }
